button hover transition

--- a/notes/aug19-button.html
+++ b/notes/aug19-button.html
@@ -79,6 +79,10 @@
             border-radius: 4px; 
             font-weight: bold; 
             cursor: pointer; 
+            transition: background-color 0.15s; 
+        }
+        .start-button:hover {
+            background-color: rgb(107, 61, 176);
         }
         .save-button {
             background-color: white;
@@ -92,6 +96,10 @@
             border-style: solid; 
             border-width: 2px;
             cursor: pointer; 
+            transition: border-width 0.1s; 
+        }
+        .save-button:hover {
+            border-width: 3px; 
         }
     </style>
 </head>
