--- a/notes/text.html
+++ b/notes/text.html
@@ -47,6 +47,52 @@
             color: rgb(96,96,96);
             width: 300px; 
             line-height: 22px;
+            margin-bottom: 100px;
+        }
+
+        .apple-text {
+            margin-bottom: 50px; 
+            font-size: 14px; 
+            background-color: rgb(227, 62, 64);
+            color: white;
+            text-align: center;
+            padding-top: 20px;
+            padding-bottom: 20px;
+        }
+
+        .shop-link {
+            cursor: pointer;
+        }
+        .shop-link:hover {
+            text-decoration: underline;
+            
+        }
+
+        .market-text {
+            margin-bottom: 20px;
+            line-height: 29px;
+        }
+
+        .price {
+            font-size: 40px;
+            font-weight: bold;
+        }
+        .currency {
+            color: gray;
+            font-size: 20px;
+            margin-left: 10px;
+        }
+        .trend{
+            color: rgb(30, 126, 30);
+            font-size: 16px;
+        }
+        .time {
+            color: gray; 
+            font-size: 16px;
+        }
+        .trend2 {
+            color: rgb(213, 11, 11);
+            font-size: 16px;
         }
     </style>
 </head>
@@ -68,6 +114,17 @@
         Talking texch and AI on heels of Google I/O. 
         Also a daily driver phone reveal from Google's CEO. 
         Shoutout to Sundar!
+    </p>
+
+    <p class="apple-text">
+        Shop early for the best selection of holiday favorites. 
+        <span class="shop-link">Shop now &#62</span>
+    </p>
+
+    <p class="market-text">
+        <span class="price">1,049.61</span> <span class="currency">USD</span><br>
+        <span class="trend">+18.06 (1.75%) today</span><br>
+        <span class="time">After hours 1,048.00</span> <span class="trend2">-1.61 (0.15%)</span>
     </p>
 </body>
 </html>
