--- a/notes/input.html
+++ b/notes/input.html
@@ -52,7 +52,11 @@
 
         .Tweet{
             vertical-align: middle;
-            width: 500px;
+            width: 450px;
+            border: none;
+            box-shadow: 0 0 3px grey;
+            border-radius: 8px;
+            padding: 10px 10px;
         }
         .profile-img{
             height: 50px; 
@@ -72,7 +76,7 @@
 
             font-weight: bold; 
             font-size: 15px; 
-            margin-left: 20px; 
+            margin-left: 80px; 
             cursor: pointer; 
 
             vertical-align: middle;
