--- a/notes/display.html
+++ b/notes/display.html
@@ -12,6 +12,7 @@
             box-shadow: 0 0 5px grey;
             display: inline-block;
             margin-right: 10px;
+            margin-bottom: 20px;
         }
         .friend-img{
             display: block; 
