google search bar modified - center

--- a/notes/input.html
+++ b/notes/input.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Input</title>
     <style>
+        .google, 
+        .google2{
+            text-align: center;
+        }
+        .google-logo{
+            width: 200px;
+        }
         .search-bar {
             height: 40px; 
             width: 700px;
@@ -91,8 +98,14 @@
     </style>
 </head>
 <body>
-    <input class="search-bar" type="text" placeholder="Search Google or type a URL"> 
-
+    <div class="google">
+        <img class="google-logo" src="OIP-C.webp">
+    </div>
+    <div class="google2">
+        <input class="search-bar" type="text" placeholder="Search Google or type a URL">
+    </div>
+     
+    
     <div class="LinkedIn">
         <p class="email">
             Email
