--- a/notes/display.html
+++ b/notes/display.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Display as block or inline-block</title>
     <style>
         .friend-contact{
             width: 200px; 
