--- a/notes/image.html
+++ b/notes/image.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Youtube.com Clone</title>
+    <title>Image fit and position</title>
     <style>
         .thumbnail {
             height: 300px;
