--- a/youtube/youtube.html
+++ b/youtube/youtube.html
@@ -4,65 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Youtube.com Clone</title>
+    <!-- font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     
-    <style>
-        p {
-            font-family: Roboto, Arial; /* backup font Arial just in case */ 
-            margin-top: 0;
-            margin-bottom: 0;
-
-        }
-        .search-bar{
-            font-size: 20px;
-            display: block;
-        }
-
-        .video-grid {
-            display: grid;
-            grid-template-columns: 1fr 1fr 1fr;
-            column-gap: 16px;
-            row-gap: 40px; 
-        }
-
-        .thumbnail {
-            width: 100%;
-            height: 200px;
-            object-fit: cover;
-            object-position: center;
-        }
-        .thumbnail-row {
-            margin-bottom: 12px;
-        }
-        .video-info-grid {
-            display: grid;
-            grid-template-columns: 50px 1fr;
-        }
-        .profile-pic{
-            width: 40px; 
-            height: 40px;
-            object-fit: cover;
-            border-radius: 20px;
-        }
-        .video-title{
-            width: 100%; 
-            font-weight: 500;
-            font-size: 14px;
-            line-height: 20px;
-            margin-bottom: 10px;
-        }
-        .video-author,
-        .video-stats {
-            color: rgb(96,96,96);
-            font-size: 12px;
-            margin-bottom: 4px;
-        }
-    </style>
+    <link rel="stylesheet" href="style/general.css">
+    <link rel="stylesheet" href="style/content.css">
+    <link rel="stylesheet" href="style/header.css">
 </head>
 <body>
-    <input class="search-bar" type="text" placeholder="Search">
+    <div class="header">
+        <div class="left-section">
+
+        </div>
+        <div class="middle-section">
+            <input class="search-bar" type="text" placeholder="Search">
+        </div>
+        <div class="right-section">
+
+        </div>
+    </div>
     
     <div class="video-grid">
         <div class="video-preview">
