--- a/youtube/youtube.html
+++ b/youtube/youtube.html
@@ -16,13 +16,23 @@
 <body>
     <div class="header">
         <div class="left-section">
-
+            <img class="hamberger-menu" src="icons/hamburger-menu.svg">
+            <img class="youtube-logo"  src="icons/youtube-logo.svg">
         </div>
         <div class="middle-section">
             <input class="search-bar" type="text" placeholder="Search">
+            <button class="search-button">
+                <img class="search-icon" src="icons/search.svg">
+            </button>
+            <button class="voice-search-button">
+                <img class="voice-search-icon" src="icons/voice-search-icon.svg">
+            </button>
         </div>
         <div class="right-section">
-
+            <img class="upload-icon" src="icons/upload.svg">
+            <img class="youtube-app-icon" src="icons/youtube-apps.svg">
+            <img class="notification-icon" src="icons/notifications.svg">
+            <img class="curr-user-profile" src="imgs/cat10.webp">
         </div>
     </div>
     
