--- a/youtube/youtube.html
+++ b/youtube/youtube.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="style/general.css">
     <link rel="stylesheet" href="style/content.css">
     <link rel="stylesheet" href="style/header.css">
+    <link rel="stylesheet" href="style/sidebar.css">
+
 </head>
 <body>
     <div class="header">
@@ -23,16 +25,61 @@
             <input class="search-bar" type="text" placeholder="Search">
             <button class="search-button">
                 <img class="search-icon" src="icons/search.svg">
+                <div class="tooltip">Search</div>
             </button>
             <button class="voice-search-button">
                 <img class="voice-search-icon" src="icons/voice-search-icon.svg">
+                <div class="tooltip">Search with your voice</div>
             </button>
         </div>
         <div class="right-section">
-            <img class="upload-icon" src="icons/upload.svg">
-            <img class="youtube-app-icon" src="icons/youtube-apps.svg">
-            <img class="notification-icon" src="icons/notifications.svg">
-            <img class="curr-user-profile" src="imgs/cat10.webp">
+            <div class="upload-icon-container">
+                <img class="upload-icon" src="icons/upload.svg">
+                <div class="tooltip">Create</div>
+            </div>
+
+            <div class="youtube-app-icon-container">
+                <img class="youtube-app-icon" src="icons/youtube-apps.svg">
+                <div class="tooltip">Youtube Apps</div>
+            </div>
+
+            <div class="notification-icon-container">
+                <img class="notification-icon" src="icons/notifications.svg">
+                <div class="notification-count">3</div>
+                <div class="tooltip">Notifications</div>
+            </div>
+            <div class="curr-user-profile-container">
+                <img class="curr-user-profile" src="imgs/cat10.webp">
+                <div class="tooltip">Profile</div>
+            </div>
+            
+        </div>
+    </div>
+
+    <div class="sidebar">
+        <div class="sidebar-link">
+            <img src="icons/home.svg">
+            <div>Home</div>
+        </div>
+        <div class="sidebar-link">
+            <img src="icons/explore.svg">
+            <div>Explore</div>
+        </div>
+        <div class="sidebar-link">
+            <img src="icons/subscriptions.svg">
+            <div>Subscriptions</div>
+        </div>
+        <div class="sidebar-link">
+            <img src="icons/originals.svg">
+            <div>Originals</div>
+        </div>
+        <div class="sidebar-link">
+            <img src="icons/youtube-music.svg">
+            <div>Youtube Music</div>
+        </div>
+        <div class="sidebar-link">
+            <img src="icons/library.svg">
+            <div>Library</div>
         </div>
     </div>
     
@@ -40,6 +87,7 @@
         <div class="video-preview">
             <div class="thumbnail-row">
                 <img class="thumbnail" src="imgs/catsSaveWorld.jpg">
+                <div class="video-time">14:20</div>
             </div>
 
             <div class="video-info-grid">
@@ -63,6 +111,7 @@
     <div class="video-preview">
             <div class="thumbnail-row">
                 <img class="thumbnail" src="imgs/cat2.jpg">
+                <div class="video-time">13:24</div>
             </div>
             <div class="video-info-grid">
                 <div class="channel-pic">
@@ -86,6 +135,7 @@
         <div class="video-preview">
             <div class="thumbnail-row">
                 <img class="thumbnail" src="imgs/cat3.jpg">
+                <div class="video-time">1:20</div>
             </div>
             <div class="video-info-grid">
                 <div class="channel-pic">
@@ -109,6 +159,7 @@
         <div class="video-preview">
             <div class="thumbnail-row">
                 <img class="thumbnail" src="imgs/cat9.jpg">
+                <div class="video-time">3:30</div>
             </div>
             <div class="video-info-grid">
                 <div class="channel-pic">
@@ -132,6 +183,7 @@
         <div class="video-preview">
             <div class="thumbnail-row">
                 <img class="thumbnail" src="imgs/cat7.jpg">
+                <div class="video-time">0:23</div>
             </div>
             <div class="video-info-grid">
                 <div class="channel-pic">
@@ -155,6 +207,7 @@
         <div class="video-preview">
             <div class="thumbnail-row">
                 <img class="thumbnail" src="imgs/cat4.jpg">
+                <div class="video-time">4:29</div>
             </div>
             <div class="video-info-grid">
                 <div class="channel-pic">
