--- a/js_notes/rock-paper-scissors/rock.html
+++ b/js_notes/rock-paper-scissors/rock.html
@@ -17,14 +17,20 @@
         playGame('scissors');
     ">Scissors</button>
 
+    <p class="js-result"></p>
+    <p class="js-moves"></p>
+    <p class="js-score"></p>
+
     <button onclick="
         score.wins = 0;
         score.ties = 0;
         score.losses = 0; 
         localStorage.removeItem('score'); 
+        updateScoreElement();
         alert('Score has been reset.')
     ">Reset Score</button>
 
     <script src="rock.js"></script>
+
 </body>
 </html>
