--- a/js_notes/small-game/calculator.html
+++ b/js_notes/small-game/calculator.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>Calculator</title>
 </head>
 <body>
     <button title="good job!" 
@@ -16,6 +16,7 @@
 
 
     <p>calculator</p>
+    <p class="display-calc"></p>
     <button onclick="
         updateCalculation('1');
       ">1</button>
@@ -84,6 +85,7 @@
         // it can potentially be given harmful code to run.
         // Only use eval() for learning purposes.
         calculation = eval(calculation);
+        updateCalculation('');
         console.log(calculation);
       ">=</button>
 
@@ -96,16 +98,19 @@
       <button onclick="
         localStorage.removeItem('calculation');
         calculation = '';
+        document.querySelector('.display-calc').innerHTML = calculation; 
         console.log(calculation);
       ">Clear</button>
     </p>
 
     <script>
       let calculation = localStorage.getItem('calculation') || '';
+      updateCalculation('');
 
       function updateCalculation(value) {
         calculation += value;
         localStorage.setItem('calculation', calculation);
+        document.querySelector('.display-calc').innerHTML = calculation; 
         console.log(calculation);
       }
     </script>
