--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </head>
 <body>
     <div class="link-collection">
+        <a href="js_notes/TodoList/TodoList.html">Todo List</a>
         <a href="js_notes/small-game/calculator.html">Calculator</a>
         <a href="js_notes/small-game/coin-flip.html">Coin Flip</a>
         <a href="js_notes/small-game/fortuneTelling.html">Fortune-Telling</a>
