--- a/js_notes/array-loops.html
+++ b/js_notes/array-loops.html
@@ -73,6 +73,35 @@
         }
 
         countWords(['apple', 'apple', 'apple', 'grape']);
+
+
+
+        // arrays are references - virtual copy
+        const array1 = [1, 2, 3];
+        const array2 = array1;        // contain the same reference 
+        array2.push(4);
+        console.log(array1);   // 1 2 3 4
+        console.log(array2);   // 1 2 3 4
+
+        // a different array with same value (deep copy)
+        const array3 = array1.slice();
+        array3.pop(); 
+        console.log(array1);   // 1 2 3 4
+        console.log(array3);   // 1 2 3
+
+        // destructuring
+        const [first, second] = [1, 2, 3];
+        console.log(first + second); // 3
+
+        for (let i = 1; i <= 20; ++i) {
+            let out = `${i}`; 
+            if (i % 3 === 0) out = 'Fizz'; 
+            if (i % 5 === 0) out = 'Buzz';
+            if (i % 3 === 0 && i % 5 === 0) out = 'FizzBuzz';
+            console.log(out);
+        }
+
+
     </script>
 </body>
 </html>
