--- a/js_notes/rock-paper-scissors/rock.html
+++ b/js_notes/rock-paper-scissors/rock.html
@@ -37,6 +37,10 @@
         alert('Score has been reset.')
     " class="reset-button">Reset Score</button>
 
+    <button onclick="
+        autoPlay();
+    " class="auto-play-button js-auto-button">Auto Play</button>
+
     <script src="rock.js"></script>
 
 </body>
