--- a/js_notes/rock-paper-scissors/rock.html
+++ b/js_notes/rock-paper-scissors/rock.html
@@ -8,19 +8,13 @@
 </head>
 <body>
     <h1>Rock Paper Scissors</h1>
-    <button onclick="
-        playGame('rock');
-    " class="move-button">
+    <button class="move-button js-rock-button">
         <img src="img/rock-emoji.png" class="move-icon">
     </button>
-    <button onclick="
-        playGame('paper');
-    " class="move-button">
+    <button class="move-button js-paper-button">
         <img src="img/paper-emoji.png" class="move-icon">
     </button>
-    <button onclick="
-        playGame('scissors');
-    " class="move-button">
+    <button class="move-button js-scissors-button">
         <img src="img/scissors-emoji.png" class="move-icon">
     </button>
 
@@ -28,18 +22,9 @@
     <p class="js-moves move"></p>
     <p class="js-score score"></p>
 
-    <button onclick="
-        score.wins = 0;
-        score.ties = 0;
-        score.losses = 0; 
-        localStorage.removeItem('score'); 
-        updateScoreElement();
-        alert('Score has been reset.')
-    " class="reset-button">Reset Score</button>
+    <button class="reset-button js-reset-button">Reset Score</button>
 
-    <button onclick="
-        autoPlay();
-    " class="auto-play-button js-auto-button">Auto Play</button>
+    <button class="auto-play-button js-auto-button">Auto Play</button>
 
     <script src="rock.js"></script>
 
