reset message confirmation

--- a/js_notes/rock-paper-scissors/rock.html
+++ b/js_notes/rock-paper-scissors/rock.html
@@ -26,6 +26,8 @@
 
     <button class="auto-play-button js-auto-button">Auto Play</button>
 
+    <div class="reset-message"></div>
+
     <script src="rock.js"></script>
 
 </body>
