--- a/jasmine-standalone-5.1.1/SpecRunner.html
+++ b/jasmine-standalone-5.1.1/SpecRunner.html
@@ -16,9 +16,12 @@
 
   <script type="module" src="utils/moneyTest.js"></script>
   <script type="module" src="data/cartTest.js"></script>
-  
+  <script type="module" src="checkout/orderSummaryTest.js"></script>
 </head>
 
 <body>
+  <div class="js-checkout-header"></div>
+  <div class="js-test-container">
+  </div>
 </body>
 </html>
