--- a/js_notes/exercise.html
+++ b/js_notes/exercise.html
@@ -18,5 +18,6 @@
     </script>
 
     <script type="module" src="defaultImport.js"></script>
+    <script type="module" src="this.js"></script>
 </body>
 </html>
