--- a/js_notes/exercise.html
+++ b/js_notes/exercise.html
@@ -19,5 +19,6 @@
 
     <script type="module" src="defaultImport.js"></script>
     <script type="module" src="this.js"></script>
+    <script src="car.js"></script>
 </body>
 </html>
