backend intro - GET

--- a/js_notes/exercise.html
+++ b/js_notes/exercise.html
@@ -20,5 +20,6 @@
     <script type="module" src="defaultImport.js"></script>
     <script type="module" src="this.js"></script>
     <script src="car.js"></script>
+    <script src="backend-prac.js"></script>
 </body>
 </html>
