--- a/js_notes/exercise.html
+++ b/js_notes/exercise.html
@@ -21,5 +21,6 @@
     <script type="module" src="this.js"></script>
     <script src="car.js"></script>
     <script src="backend-prac.js"></script>
+    <script src="backend.js"></script>
 </body>
 </html>
