add youtube to index page

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <a href="js_notes/small-game/fortuneTelling.html">Fortune-Telling</a>
         <a href="js_notes/rock-paper-scissors/rock.html">Rock Paper Scissors</a>
         <a href="youtube/youtube.html">My CatTube</a>
+        <a href="amazon/amazon.html">My Amazon</a>
     </div>
 </body>
 </html>
