--- a/react/chatbot/chatbot.html
+++ b/react/chatbot/chatbot.html
@@ -23,7 +23,10 @@
             // fragment: only brackets <>, similar to <div> but doesn't add extra div element 
             return (
                 <>
-                    <input placeholder="Send a message to Chatbot" size="30" />  
+                    <input 
+                        placeholder="Send a message to Chatbot" 
+                        size="30" 
+                    />  
                     <button>Send</button> 
                 </>
             ); // size: # of characters fit 
@@ -61,18 +64,21 @@
         // component syxtax: create our own HTML element
         // also works: {ChatInput()}
         //             <ChatInput></ChatInput>
-        const app = (
-            <>
-                <ChatInput /> 
-                <ChatMessage message="hello chatbot" sender="user" />
-                <ChatMessage message="Hello! How can I help you?" sender="robot" />
-                <ChatMessage message="today date?" sender="user" />
-                <ChatMessage message="Today is Oct 20" sender="robot" />
-            </>
-        );
+        function App() {
+            return (
+                <>
+                    <ChatInput /> 
+                    <ChatMessage message="hello chatbot" sender="user" />
+                    <ChatMessage message="Hello! How can I help you?" sender="robot" />
+                    <ChatMessage message="today date?" sender="user" />
+                    <ChatMessage message="Today is Oct 20" sender="robot" />
+                </>
+            );
+        }
+        
 
         const container = document.querySelector('.js-container');
-        ReactDOM.createRoot(container).render(app); 
+        ReactDOM.createRoot(container).render(<App />); 
     </script>
 </body>
 </html>
