--- a/react/chatbot/chatbot.html
+++ b/react/chatbot/chatbot.html
@@ -15,7 +15,29 @@
 
     <script type="text/babel">
         // component name must start with Capital letter
-        function ChatInput() {
+        function ChatInput({chatMessages, setChatMessages}) {
+            const [inputText, setInputText] = React.useState('');
+
+            function saveInputText(event) {
+                setInputText(event.target.value); 
+            }
+            
+            function sendMessage() {
+                // copy the array into this new array
+                // ...is the spread operator
+                setChatMessages([
+                    ...chatMessages, 
+                    {
+                        message: inputText,
+                        sender: 'user',
+                        id: crypto.randomUUID()
+                    }
+                ]); 
+                
+                // matches with value={inputText}, to clear the input box after sent
+                setInputText('');
+            }
+
             // JSX requires closing tag on input
             // <input /> is a shortcut for <input></input>
 
@@ -26,8 +48,12 @@
                     <input 
                         placeholder="Send a message to Chatbot" 
                         size="30" 
+                        onChange={saveInputText}
+                        value={inputText}
                     />  
-                    <button>Send</button> 
+                    <button 
+                        onClick= {sendMessage}
+                    >Send</button> 
                 </>
             ); // size: # of characters fit 
         }
@@ -61,7 +87,28 @@
             );
         }
 
-        function ChatMessages() {
+        function ChatMessages({chatMessages}) {
+            return (
+                <>
+                    {chatMessages.map((chatMessage) => {
+                        return (
+                            <ChatMessage 
+                                message={chatMessage.message}
+                                sender={chatMessage.sender} 
+                                key={chatMessage.id}
+                            />
+                        );
+                    })}
+                </>
+            );
+        }
+
+
+        // component syxtax: create our own HTML element
+        // also works: {ChatInput()}
+        //             <ChatInput></ChatInput>
+        function App() {
+
             // state bounds HTML and data, auto-updates HTML
             const [chatMessages, setChatMessages]= React.useState([{
                 message: "hello chatbot",
@@ -89,44 +136,15 @@
                 const setChatMessages = array[1]; // updater function
             */
 
-            function sendMessage() {
-                // copy the array into this new array
-                // ...is the spread operator
-                setChatMessages([
-                    ...chatMessages, 
-                    {
-                        message: 'test',
-                        sender: 'user',
-                        id: crypto.randomUUID()
-                    }
-                ]); 
-            }
-
             return (
                 <>
-                    {chatMessages.map((chatMessage) => {
-                        return (
-                            <ChatMessage 
-                                message={chatMessage.message}
-                                sender={chatMessage.sender} 
-                                key={chatMessage.id}
-                            />
-                        );
-                    })}
-                </>
-            );
-        }
-
-
-        // component syxtax: create our own HTML element
-        // also works: {ChatInput()}
-        //             <ChatInput></ChatInput>
-        function App() {
-
-            return (
-                <>
-                    <ChatInput /> 
-                    <ChatMessages />
+                    <ChatInput 
+                        chatMessages={chatMessages}
+                        setChatMessages={setChatMessages}
+                    /> 
+                    <ChatMessages 
+                        chatMessages={chatMessages}
+                    />
                 </>
             );
         }
